// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spaces tests change space to hq_integration-zeek-bulk 1`] = `
Array [
  "count",
  "4",
]
`;

exports[`Spaces tests change space to hq_integration-zeek-bulk 2`] = `
Array [
  "count",
  "41,088,058",
]
`;
